tests/artifacts/grpcroute-tls-problems.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GRPCRoute
metadata:
  creationTimestamp: "2026-06-26T23:39:52Z"
  generation: 1
  name: grpc-app
  namespace: default
  resourceVersion: "2891"
  uid: c435653a-2de9-4020-a816-f4e16013a021
spec:
  parentRefs:
  - name: eg
    sectionName: self-signed
  rules:
  - backendRefs:
    - name: grpc-app
      port: 50051
status:
  parents:
  - controllerName: gateway.envoyproxy.io/gatewayclass-controller
    parentRef:
      name: eg
      sectionName: self-signed
    conditions:
    - lastTransitionTime: "2026-06-26T23:42:41Z"
      message: Route is accepted
      observedGeneration: 1
      reason: Accepted
      status: "True"
      type: Accepted
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  creationTimestamp: "2026-06-26T23:39:52Z"
  generation: 1
  name: eg
  namespace: default
  resourceVersion: "2879"
  uid: a435653a-2de9-4020-a816-f4e16013a010
spec:
  gatewayClassName: eg
  listeners:
  - allowedRoutes:
      namespaces:
        from: Same
    name: self-signed
    port: 446
    protocol: HTTPS
    tls:
      mode: Terminate
      certificateRefs:
      - kind: Secret
        name: selfsigned-tls
status:
  conditions:
  - lastTransitionTime: "2026-06-26T23:42:41Z"
    message: The Gateway has been scheduled by Envoy Gateway
    observedGeneration: 1
    reason: Accepted
    status: "True"
    type: Accepted
  listeners:
  - attachedRoutes: 1
    conditions:
    - lastTransitionTime: "2026-06-26T23:42:41Z"
      message: Listener references have been resolved
      observedGeneration: 1
      reason: ResolvedRefs
      status: "True"
      type: ResolvedRefs
    name: self-signed
---
apiVersion: v1
kind: Secret
metadata:
  creationTimestamp: "2026-06-26T23:39:52Z"
  name: selfsigned-tls
  namespace: default
  resourceVersion: "2883"
  uid: b435653a-2de9-4020-a816-f4e16013a014
type: kubernetes.io/tls
data:
  tls.crt: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURPVENDQWlHZ0F3SUJBZ0lVVUhrQWNlS3I2UEkrSFRsQURsbUQxblZ1TXJZd0RRWUpLb1pJaHZjTkFRRUwKQlFBd0hERWFNQmdHQTFVRUF3d1JiM1JvWlhJdVpYaGhiWEJzWlM1amIyMHdJQmNOTWpZd056QTBNakV6TXpFeQpXaGdQTWpFeU5qQTJNVEF5TVRNek1USmFNQnd4R2pBWUJnTlZCQU1NRVc5MGFHVnlMbVY0WVcxd2JHVXVZMjl0Ck1JSUJJakFOQmdrcWhraUc5dzBCQVFFRkFBT0NBUThBTUlJQkNnS0NBUUVBdnZZYzdQbmd5OGthZUFxZVR3SXgKSkFCT0FEbnB3MnR6Zld1S051dmtLa0pYMTdBdzU1eWgvOG5CNDRYdHp3WFFheUozWGZRTXV5b20zRFYyL0dHbApyaVY2WTVWWmhPVVBXS [...]
  tls.key: LS0tLS1CRUdJTiBQUklWQVRFIEtFWS0tLS0tCk1JSUV2Z0lCQURBTkJna3Foa2lHOXcwQkFRRUZBQVNDQktnd2dnU2tBZ0VBQW9JQkFRQys5aHpzK2VETHlScDQKQ3A1UEFqRWtBRTRBT2VuRGEzTjlhNG8yNitRcVFsZlhzRERubktIL3ljSGpoZTNQQmRCckluZGQ5QXk3S2liYwpOWGI4WWFXdUpYcGpsVm1FNVE5WWlHSUNUbHlWWGZFT1MrKzNWb3JRdmRSdG1zVkRpYXpVV0svbzlEZXh5T2ZDCndOSEJOOHBLTnNRdko5YjNueVJOWnBPV2xxSXJPWW5HUzVnUmJRemV4T3A2N1A5MHRBdytVcTlFblRHL3VkUGMKTjZYUC9DT2gwVW1GVnZzeG5kYTJBUmRJTC9uajJ3ZW11OWxFZWd3ekRCcklVdzJIeXJkVHE3N2phVlcwams1NgpMV3RKc0k4bHVwb1M5V [...]
    ZmlqZjgvOHZiMkJSYUcwc3NadWdiaWl4RGpiU2RJSURKNzVwbmVyN3FhcHd1U1dvQlBLRzVZY0pqWG10YTVnMgpqUXdsemFraTBxT3ZHY1VkRWRPekdQbHVYdlh5ZUdTQmdyZjRQWUlGbiszQmg2cm50OWlOR0NRT0p1dDYzWS92Ckdvb0ZDYjl1QTgwK0dudHdCK3dnMmtnVXlrekyakt2N3JDUjBGQjkxdEFvR0JBTmh6emc3clpQU1pGbUVUeVB5ZwpLUWhEK1JKU1REazc5NXlEWWVYdFZ4RmdWL01sNGYrSjFjcjJiOEJBOFRYVGRVWDcvb2JMUHdWNVpPZnhxNm5LClNaZ1NJTU5UWEZndUZZUW5zOGlQSG5oL0g0SkZKZGRlS3RsdHBmVTRkRnY5eERBV3VTWGc4NFpEYVE4ZUpOZFYKT1JEdnhHU0EzYjFMZnphR3NrdFZidjJnCi0tLS0tRU5EIFBSSVZBVEUgS0VZL [...]
